--- a/BookStore/src/main/resources/templates/fragments/header.html
+++ b/BookStore/src/main/resources/templates/fragments/header.html
@@ -6,7 +6,7 @@
         <li><a th:text="#{nav_bar_categories}" th:href="@{/categories/all}">Categories</a></li>
         <th:block sec:authorize="hasRole('USER')">
             <li><a th:text="#{nav_bar_profile}" th:href="@{/users/profile}">Profile</a></li>
-            <li><a th:text="#{nav_bar_ShoppingBag}" th:href="@{/}">Shopping Bag</a></li>
+            <li><a th:text="#{nav_bar_ShoppingBag}" th:href="@{/shopping-bag}">Shopping Bag</a></li>
         </th:block>
         <th:block sec:authorize="hasRole('ADMIN')">
             <li><a th:text="#{nav_bar_adminBoard}" th:href="@{/users/admin}">Admin Board</a></li>
