--- a/BookStore/src/main/resources/templates/admin.html
+++ b/BookStore/src/main/resources/templates/admin.html
@@ -23,6 +23,7 @@ xmlns:th="http://www.thymeleaf.org">
                 <li><a th:href="@{/book/add}">Add Book</a></li>
                 <li><a th:href="@{/delete-books}">Manage Book</a></li>
                 <li><a th:href="@{/category/add}">Add Category</a></li>
+                <li><a th:href="@{/order}">Orders</a></li>
             </ul>
             <div class="notifications">
                 <h3>Notifications</h3>
