--- a/BookStore/src/main/resources/static/css/information.css
+++ b/BookStore/src/main/resources/static/css/information.css
@@ -609,3 +609,84 @@ margin-bottom: 2rem;
     background-color: #e9ecef;
 }
 
+.order-details {
+    max-width: 1000px;
+    margin: 20px auto;
+    padding: 20px;
+    background-color: #ffffff;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.order-details h2 {
+    font-size: 24px;
+    margin-bottom: 20px;
+    color: #333333;
+}
+
+.order-details table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.order-details th,
+.order-details td {
+    padding: 10px;
+    border: 1px solid #dee2e6;
+    text-align: left;
+}
+
+.order-details th {
+    background-color: #007bff;
+    color: #ffffff;
+}
+
+.order-details td {
+    background-color: #ffffff;
+}
+
+.order-details tr:nth-child(even) td {
+    background-color: #f2f2f2;
+}
+
+.order-details ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
+.order-details li {
+    margin-bottom: 5px;
+}
+
+/* Buttons styles */
+.btn-refill,
+.btn-delete {
+    display: inline-block;
+    padding: 5px 10px;
+    font-size: 14px;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 4px;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    color: #ffffff;
+}
+
+.btn-refill {
+    background-color: #28a745;
+}
+
+.btn-refill:hover {
+    background-color: #218838;
+}
+
+.btn-delete {
+    background-color: #dc3545;
+}
+
+.btn-delete:hover {
+    background-color: #c82333;
+}
