--- a/BookStore/src/main/resources/templates/error.html
+++ b/BookStore/src/main/resources/templates/error.html
@@ -15,7 +15,7 @@
 <main class="error">
     <div class="container">
         <h1>Something Went Wrong</h1>
-        <p>We're sorry, but there was an issue with your checkout. Please try again later.</p>
+        <p>We're sorry, but there was an issue. Please try again later.</p>
         <a th:href="@{/}" class="btn btn-primary">Return to Home</a>
     </div>
 </main>
