--- a/BookStore/src/main/resources/templates/category-details.html
+++ b/BookStore/src/main/resources/templates/category-details.html
@@ -29,7 +29,7 @@
                 <td th:text="${category.id}">1</td>
                 <td th:text="${category.category}">Category Name</td>
                 <td th:text="${category.description}">Category Description</td>
-                <th:block sec:authorize="hasRole('ADMIN')">
+                <th:block sec:authorize="hasAnyRole('ADMIN', 'MODERATOR')">
                 <td>
                     <form th:action="@{/categories/{id}(id=${category.id})}" method="post" style="display:inline;">
                         <input type="hidden" name="_method" value="delete">
