--- a/BookStore/src/main/resources/templates/fragments/header.html
+++ b/BookStore/src/main/resources/templates/fragments/header.html
@@ -10,7 +10,7 @@
         <th:block sec:authorize="hasRole('USER')">
             <li><a th:text="#{nav_bar_ShoppingBag}" th:href="@{/shopping-bag}">Shopping Bag</a></li>
         </th:block>
-        <th:block sec:authorize="hasRole('ADMIN')">
+        <th:block sec:authorize="hasAnyRole('ADMIN', 'MODERATOR')">
             <li><a th:text="#{nav_bar_adminBoard}" th:href="@{/users/admin}">Admin Board</a></li>
         </th:block>
         <th:block sec:authorize="hasRole('ADMIN')">
