--- a/BookStore/src/main/resources/templates/error/out-of-stock.html
+++ b/BookStore/src/main/resources/templates/error/out-of-stock.html
@@ -11,6 +11,7 @@
 <body>
 <div class="error-container">
     <p th:text="${message}">One or more books are out of stock.</p>
+    <a th:href="@{/}">Return to Home Page</a>
 </div>
 </body>
 </html>
