--- a/BookStore/src/main/resources/templates/error/general-error.html
+++ b/BookStore/src/main/resources/templates/error/general-error.html
@@ -11,6 +11,7 @@
 <body>
 <div class="error-container">
     <p th:text="${message}">An unexpected error occurred.</p>
+    <a th:href="@{/}">Return to Home Page</a>
 </div>
 </body>
 </html>
