--- a/BookStore/src/main/resources/templates/error/object-not-found.html
+++ b/BookStore/src/main/resources/templates/error/object-not-found.html
@@ -12,6 +12,7 @@
 <div class="not-found">
     <p th:text="${message}"></p>
     <p th:text="'With ID: ' + ${id}"></p>
+    <a th:href="@{/}">Return to Home Page</a>
 </div>
 
 
