--- a/BookStore/src/main/resources/templates/book-detail.html
+++ b/BookStore/src/main/resources/templates/book-detail.html
@@ -24,9 +24,24 @@ xmlns:th="http://www.thymeleaf.org">
                 <button type="submit" class="btn btn-primary">Add to Bag</button>
             </form>
             <p th:text="*{description}">Description</p>
+
+            <div class="review-form">
+                <h2>Leave a Review</h2>
+                <form th:action="@{/add/{bookId}(bookId=${bookDetails.id})}" method="post">
+                    <input type="hidden" name="bookId" th:value="${bookDetails.id}" />
+
+                    <label for="rating">Rating (1-5):</label>
+                    <input type="number" id="rating" name="rating" min="1" max="5" required />
+
+                    <label for="comment">Comment:</label>
+                    <textarea id="comment" name="comment" rows="4" required></textarea>
+
+                    <button type="submit" class="btn btn-primary">Submit Review</button>
+                </form>
+            </div>
         </div>
     </main>
 
-    <footer th:replace="fragments/footer"></footer>
+
 </body>
 </html>
